--- a/metadata.yaml
+++ b/metadata.yaml
@@ -34,5 +34,6 @@ subjects:
 - !lcsh 'Animal welfare -- Juvenile fiction'
 - !lcsh 'Readers'
 - !lcsh 'Children -- Conduct of life -- Juvenile fiction'
+- GITenberg
 title: The Third Little Pet Book, with the Tale of Mop and Frisk
 url: http://www.gutenberg.org/ebooks/32513
